# PM-Agent-using-ReWOO

./: .env.example  .gitignore  QUICK_START_TOKEN_TRACKING.md  README.md  RESTRUCTURING_SUMMARY.md  TOKEN_TRACKING_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  example_token_tracking_integration.py  generate_feasibility_questions.py  generate_project_plan.py  main.py  pyproject.toml  requirements.txt  server.py  test_api.py  test_architecture.py  test_document_intelligence.py  test_feasibility_md_input.py  test_token_tracking.py
agents/: content_extractor.py  document_classifier.py
app/: draft.py  feasibility_agent.py  graph.py  plan.py  reflect.py  revise.py  solver.py  tool_executor.py
config/: document_intelligence_config.py  llm_config.py
core/: __init__.py  cache_manager.py  document_analyzer.py  document_intelligence_pipeline.py  intelligent_document_parser.py  session.py  session_storage.py
docs/: API_REFERENCE.md  ARCHITECTURE_DIAGRAMS.md  ASYNC_UPLOAD_ARCHITECTURE.md  CODEBASE_ANALYSIS.md  DOCLING_OPTIMIZATION.md  ENV_CONFIGURATION.md  ENV_VARS.md  FEASIBILITY_V4_UPGRADE.md  FRONTEND_STATUS_POLLING.md  HARDCODED_SESSION_MODE.md  LLM_MD_TO_JSON_IMPLEMENTATION.md  MIGRATION_GUIDE.md  PARSING_EMBEDDING_ARCHITECTURE.md  PROCESSING_PIPELINE_GUARANTEES.md  PROJECT_STRUCTURE.md  QUICK_START.md  TOKEN_TRACKING.md
frontend/: package-lock.json  package.json  vite.config.js
mmrag/: pyproject.toml
outputs/: agent_execution_log_20251027_140249.md  agent_execution_log_20251027_145134.md  agent_execution_log_20251027_145942.md  cms_brd_feasibility_questions.md  (+11 more)
(+132 files in other folders)
